--- a/Mainpage.css
+++ b/Mainpage.css
@@ -145,7 +145,7 @@ h1 {
   position: absolute;
   inset: 0;
 
-  background-image: url("/images/thumbnail_Logo-removebg-preview (1).png");
+  background-image: url("./images/carbon.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 75%;
